Deleted z-index on new in and last chance to avoid problems with header

--- a/styles/partials/_described_product.scss
+++ b/styles/partials/_described_product.scss
@@ -4,7 +4,7 @@
   width: 100%;
 }
 .new-in {
-  z-index: 2;
+  // z-index: 2;
   position: absolute;
   height: 100%;
   top: 0;
@@ -32,7 +32,7 @@
 }
 .out-of-stock {
   background: #4133335d;
-  z-index: 2;
+  // z-index: 2;
   position: absolute;
   height: 100%;
   top: 0;
