--- a/styles/partials/_display_products.scss
+++ b/styles/partials/_display_products.scss
@@ -135,7 +135,7 @@
 
   .out-of-stock {
     background: #4133335d;
-    z-index: 2;
+    // z-index: 2;
     position: absolute;
     height: 100%;
     top: 0;
@@ -177,7 +177,7 @@
     }
   }
   .new-in {
-    z-index: 2;
+    // z-index: 2;
     position: absolute;
     height: 100%;
     top: 0;
